# excepciones

./: CMakeLists.txt  README.md
ejercicio1/: main1.cpp  main1.h
ejercicio2/: main2.cpp  main2.h
ejercicio3/: main3.cpp  main3.h
ejercicio4/: main4.cpp  main4.h
ejercicio5/: main5.cpp  main5.h
ejercicio6/: main6.cpp  main6.h
ejercicio7/: main7.cpp  main7.h
