cmake_minimum_required(VERSION 3.29)
project(untitled18)

set(CMAKE_CXX_STANDARD 20)

add_executable(untitled18_ejercicio1 ejercicio1/main1.cpp)
add_executable(untitled18_ejercicio2 ejercicio2/main2.cpp)
add_executable(untitled18_ejercicio3 ejercicio3/main3.cpp)
add_executable(untitled18_ejercicio4 ejercicio4/main4.cpp)
add_executable(untitled18_ejercicio5 ejercicio5/main5.cpp)